<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crearProductoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="128dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:gravity="center"
            android:text="Datos del Producto"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvArticulo"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:text="Artículo" />

                    <TextView
                        android:id="@+id/tvDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="152dp"
                        android:gravity="center"
                        android:text="Descripcion" />

                    <TextView
                        android:id="@+id/tvPrecioUnitario"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:text="Precio Unitario" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="271dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etArticulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/etIngreseNombre"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/etDescipcion"
                        android:layout_width="match_parent"
                        android:layout_height="152dp"
                        android:ems="10"
                        android:hint="@string/etIngreseDescripcion"
                        android:inputType="textLongMessage"
                        android:textColorHint="?android:attr/textColorHint" />

                    <EditText
                        android:id="@+id/etPrecioUnitario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/etIngresePrecioUnitario"
                        android:inputType="number"
                        android:textColorHint="?android:attr/textColorHint" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickAgregar"
                android:text="Agregar al Inventario" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCancelar"
                android:text="Cancelar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>